<resources>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="app_name">Avira</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="internet_checking_internet">Checking your internet connection…</string>
    <string name="internet_network_unavailable">Network Unavailable</string>
    <string name="internet_please_enable_network">Please connect to a mobile or Wi-Fi network to continue.</string>
    <string name="internet_go_to_settings">Go to Settings</string>
    <string name="backend_unknown_error_title">Unknown error</string>
    <string name="backend_unknown_error">An error has occurred. Please try again later.</string>
    <string name="backend_validating_with_server">Validating with server…</string>
    <string name="app_list_screen_header_title">App Lock</string>
    <string name="app_list_screen_header_desc">App Lock protects your apps from being accessed by unauthorized users of your device</string>
    <string name="app_list_screen_header_scanning">Scanning for installed applications</string>
    <string name="app_list_screen_header_settings">App Lock Settings</string>
    <string name="app_list_screen_status_disabled">App Lock is disabled. To lock your apps go to the Settings menu and enable App Lock</string>
    <string name="app_list_screen_status_enabled">App Lock is now enabled</string>
    <string name="recommended_app_prevent_uninstall">Prevent uninstalling applications</string>
    <string name="recommended_app_prevent_install_or_uninstall">Prevent installing or uninstalling applications</string>
    <string name="recommended_app_prevent_uninstall_or_settings_change">Prevent uninstalling applications or changing settings</string>
    <string name="settings_screen_title">App Lock Settings</string>
    <string name="settings_screen_status_enabled">Enabled</string>
    <string name="settings_screen_status_disabled">Disabled</string>
    <string name="settings_screen_option_change_pin">Change PIN</string>
    <string name="settings_screen_option_change_pin_successful">PIN changed successfully</string>
    <string name="settings_screen_option_change_pass">Change Recovery Password</string>
    <string name="settings_screen_option_change_pass_successful">Recovery password changed successfully</string>
    <string name="change_pin_screen_title">Enter new PIN</string>
    <string name="confirm_change_pin_screen_title">Confirm new PIN</string>
    <string name="change_recovery_pass_screen_title">Enter new recovery password</string>
    <string name="confirm_change_recovery_pass_screen_title">Confirm new recovery password</string>
    <string name="setup_pin_screen_title">Set up an Avira App Lock PIN</string>
    <string name="setup_pin_screen_show_pin">Show PIN</string>
    <string name="setup_pin_screen_hide_pin">Hide PIN</string>
    <string name="setup_pin_screen_edittext_hint">%1$d - %2$d digits</string>
    <string name="setup_pin_screen_min_pin_length">Minimum PIN length is %1$d digits</string>
    <string name="setup_pin_screen_max_pin_length">Maximum PIN length is %1$d digits</string>
    <string name="setup_pin_screen_error_numeric">PIN must be numeric</string>
    <string name="confirm_setup_pin_screen_title">Please confirm your PIN</string>
    <string name="confirm_setup_pin_screen_pin_mismatch">PIN codes do not match</string>
    <string name="setup_recovery_pass_screen_title">Set up a recovery password</string>
    <string name="setup_recovery_pass_screen_show_password">Show password</string>
    <string name="setup_recovery_pass_screen_hide_password">Hide password</string>
    <string name="setup_recovery_pass_screen_edittext_hint">%1$d - %2$d characters</string>
    <string name="setup_recovery_pass_screen_desc">The password is important in case you forget your PIN</string>
    <string name="setup_recovery_pass_screen_min_pass_length">Minimum password length is %1$d digits</string>
    <string name="setup_recovery_pass_screen_max_pass_length">Maximum password length is %1$d digits</string>
    <string name="confirm_setup_pass_screen_title">Confirm recovery password</string>
    <string name="confirm_setup_pass_screen_pass_mismatch">Password do not match</string>
    <string name="setup_pin_completed_screen_title">App Lock has been activated</string>
    <string name="setup_pin_completed_screen_desc_title">Please note</string>
    <string name="setup_pin_completed_screen_desc_content">"In case you forget your PIN and password, your recovery email address is
%1$s"</string>
    <string name="setup_pin_completed_screen_button">Start using Avira App Lock</string>
    <string name="applock_screen_title_enter_pin">Please enter your Avira PIN</string>
    <string name="applock_screen_title_forgot_pin">Did you forget your PIN?</string>
    <string name="applock_screen_wrong_pin">Wrong PIN</string>
    <string name="applock_screen_link_forgot_pin">Forgot your PIN?</string>
    <string name="applock_screen_link_recovery_pass">Go to recovery password</string>
    <string name="recover_pin_via_pass_screen_title_enter_pass">Please enter your recovery password</string>
    <string name="recover_pin_via_pass_screen_title_forgot_pass">Did you forget your password?</string>
    <string name="recover_pin_via_pass_screen_desc">This password was set up when you first activated App Lock</string>
    <string name="recover_pin_via_pass_screen_wrong_pass">Wrong password</string>
    <string name="recover_pin_via_pass_screen_link_forgot_pass">Forgot your recovery password?</string>
    <string name="recover_pin_via_pass_screen_link_send_code">Send PIN reset code via email</string>
    <string name="recover_pin_via_email_screen_title">"Please enter the PIN reset code sent to your email account
%1$s"</string>
    <string name="recover_pin_via_email_screen_unlock_failed">Wrong PIN reset code</string>
    <string name="recover_pin_via_email_screen_wrong_reset_code">Code entered does not match the code we have sent to your email</string>
    <string name="recover_pin_via_email_screen_reset_code_expired">PIN reset code has expired! Please request a new reset code</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="Key_PreferencesCheckBoxC2DM">key_preferences_checkbox_c2dm</string>
    <string name="Key_PreferencesCheckboxWipeReboot">key_preferences_checkbox_wipereboot</string>
    <string name="Key_PreferencesDisableScheduleRefresh">key_disable_scan_scheduler_refresh</string>
    <string name="Key_PreferencesSendErrorLog">key_preferences_send_error_log</string>
    <string name="Key_PreferencesGenerateContact">key_preferences_generate_contact</string>
    <string name="Key_PreferencesGenerateSms">key_preferences_generate_sms</string>
    <string name="Key_PreferencesGenerateCall">key_preferences_generate_call</string>
    <string name="Key_PreferencesSetUpdateServer">key_preferences_set_update_server</string>
    <string name="Key_PreferencesUpdateGCMId">key_preferences_update_gcm_id</string>
    <string name="Key_PreferencesTestRemoteLocation">key_preferences_test_remote_locator</string>
    <string name="Key_PreferencesDebugDeviceInfo">key_preferences_debug_device_info</string>
    <string name="Key_PreferencesVdfUpdateSoon">key_preferences_vdf_update_soon</string>
    <string name="Key_PreferencesUpdateNotify">update_notify</string>
    <string name="Key_PreferencesUpdateNotify2">update_notify2</string>
    <string name="Key_PreferencesUpdateNotify3">update_notify3</string>
    <string name="Key_PreferencesCrashJava">crash_java</string>
    <string name="Key_PreferencesCrashNative">crash_native</string>
    <string name="Key_IABDebuggingSelectSKU">iab_debug_sku</string>
    <string name="Key_IABDebuggingToggleServerError">iab_debug_server_error</string>
    <string name="Key_IABDebuggingForcePremium">iab_debug_force_premium</string>
    <string name="Key_IABDebuggingSetADifferentRenewDate">iab_debug_renew_date</string>
    <string name="Key_IABDebuggingWriteOrdersToSDCard">iab_debug_print_all</string>
    <string name="Key_IABDebuggingWriteDeviceToSDCard">iab_debug_print_device</string>
    <string name="Key_SendDeviceInfo">key_preferences_send_device_info</string>
    <string name="Key_PreferencesResetApplication">key_preferences_reset_application</string>
    <string name="Key_PreferencesWelcomeScreen">key_preferences_welcome_screen</string>
    <string name="DemoWelcomeScreen">Demo Welcome Screen</string>
    <string name="SetC2DM">Demo enable C2DM</string>
    <string name="SetSimulateRebootWipe">Demo reboot SIM wipe</string>
    <string name="DisableScanSchedulerRefresh">Disable scan scheduler refresh on time changed</string>
    <string name="SendErrorLog">Send error log</string>
    <string name="UnlinkApplication">Demo unlink device</string>
    <string name="IABDebuggingSelectSKU">Select product SKU</string>
    <string name="IABDebuggingToggleServerError">IAB Server Error Setup</string>
    <string name="IABDebuggingForcePremium">Make user premium locally</string>
    <string name="imageButtonContentDescription" />
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Next">NEXT ></string>
    <string name="Close">Close</string>
    <string name="registration_email">Email address</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_invalid_email_format">Invalid email address format</string>
    <string name="registration_password_mismatch">Passwords do not match</string>
    <string name="registration_eula_description">By creating an account, I agree to the End User License Agreement.</string>
    <string name="registration_eula_link">(EULA)</string>
    <string name="create_account">Create account</string>
    <string name="Delete">Delete</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Name">Name</string>
    <string name="BlockingOptions">Blocking options</string>
    <string name="CallSms">Block calls &amp; SMS</string>
    <string name="Calls">Block calls</string>
    <string name="Sms">Block SMS</string>
    <string name="AddBlacklistFromContact">Add from contacts</string>
    <string name="AddBlacklistFromCallLog">Add from call log</string>
    <string name="AddBlacklistFromSmsLog">Add from SMS log</string>
    <string name="AddBlacklistCreateNew">Create new</string>
    <string name="Uninstall">Uninstall</string>
    <string name="AntitheftWipe">Wipe</string>
    <string name="AntitheftWipeDesc">Erase all content and settings to protect your privacy</string>
    <string name="AntitheftLock">Lock</string>
    <string name="AntitheftLockDesc">Lock your device to protect its contents</string>
    <string name="AntitheftScream">Yell</string>
    <string name="AntitheftScreamDesc">Help to find your device</string>
    <string name="Save">Save</string>
    <string name="block_private_caller">Blacklist private numbers</string>
    <string name="block_unknown_numbers">Blacklist all unknown numbers</string>
</resources>